# sol-tamp

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml
configs/: sol_tamp.yaml
experiments/: enjoy_tamp.py  train_tamp.py
sol_tamp/adapters/: env_wrapper.py
sol_tamp/models/: __init__.py
sol_tamp/options/: __init__.py
src/sol_tamp/: tamp_envs.py  tamp_params.py
src/sol_tamp/adapters/: __init__.py  env_wrapper.py  intrinsic_rewards.py  observation_encoder.py  reward_computers.py  skill_override_wrapper.py  skill_policies.py  sol_wrapper.py
src/sol_tamp/options/: predefined_skill.py
tests/: test_env_wrapper.py  test_fixed_skeleton_obstacle2d.py  test_integration.py  test_skill_action_debug.py  test_skill_override.py  test_sol_runner.py  test_sol_runner_episodic.py  test_tamp_envs.py
