[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sol_tamp"
version = "0.1.0"
description = "SOL baseline for TAMP environments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "gymnasium>=0.29.0",
    "torch>=2.0.0",
    "pyyaml>=6.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "huggingface_hub<0.20",
    "tamp_improv@git+https://github.com/isabelliu0/tamp_physical_improvisation@62b845c",
]

[project.optional-dependencies]
develop = [
    "black>=25.0.0",
    "isort>=5.13.2",
    "mypy>=1.0.0",
    "pylint>=3.0.0",
    "pytest>=8.0.0",
    "ipdb>=0.13.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["sol_tamp*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
py_version = 310
profile = "black"
multi_line_output = 2
split_on_trailing_comma = true

[tool.mypy]
strict_equality = true
warn_unreachable = true
exclude = ["venv/*", "scripts/*"]
